option java_package = "com.voole.hobbit.proto.simple";
option java_generate_equals_and_hash = true;

message OrderPlayBgnSimple {
	optional uint64 OEMID = 1;
	optional string HID = 2;
	optional string sessID = 3;
	optional string FID = 4;
	optional string URL = 5;
	optional uint64 stamp = 6;
}

message OrderPlayEndSimple {
	optional string HID = 1;
	optional string sessID = 2;
	optional uint64 stamp = 3;
	optional uint64 sessAvgSpeed = 4;
}

message OrderPlayAliveSimple {
	optional string sessID = 1;
	optional uint64 stamp = 2;
	optional uint64 sessAvgSpeed = 3;
}